fixes overlapping tooltip text

--- a/src/css/story/sidebar.styl
+++ b/src/css/story/sidebar.styl
@@ -153,7 +153,14 @@
 			stroke $light-tan
 			stroke-width 2
 
+		.tooltip-bg
+			fill $light-tan !important
+			stroke $light-tan !important
+			stroke-width 5 !important
+
 		.tooltip-text
 			font-family $national
 			font-weight 700
-			text-shadow -4px -4px 0 $light-tan, 4px -4px 0 $light-tan, -4px 4px 0 $light-tan, 4px 4px 0 $light-tan
+			fill $off-black
+			stroke-width 0
+			//text-shadow -4px -4px 0 $light-tan, 4px -4px 0 $light-tan, -4px 4px 0 $light-tan, 4px 4px 0 $light-tan
